# Snake

./: .gitignore  CMakeLists.txt  README.md  Snake.sln  Snake.vcxproj  Snake.vcxproj.filters
inc/: Config.h  Food.h  Game.h  Snake.h
src/: Game.cpp  Snake.cpp  main.cpp
